--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
+:root {
+    --color0: white;
+    --color1: black;
+    --color2: lightblue;
+    --color4: black;
+    --color5: red;
+    --color6: blue;
+}
+
 * {
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
+}
+
+html {
+    font-size: 10px;
 }
 
 .App {
@@ -11,24 +24,28 @@
     display: flex;
     justify-content: start;
     flex-direction: column;
+    background-color: var(--color0);
 }
 
 .wrapper {
     max-width: 1024px;
     margin: 0 auto;
+    position: relative;
+    padding: 0 2rem;
 }
 
 a {
-    color: blue;
-    font-size: 1.5rem;
+    color: var(--color6);
+    font-size: 2rem;
     font-weight: bold;
 }
 
 button {
-    padding: 1rem;
-    font-size: 1.5rem;
-    border-radius: 1rem;
-    border: 0.2rem solid lightblue;
+    padding: 1.5rem;
+    font-weight: bold;;
+    font-size: 2rem;
+    border-radius: 2rem;
+    border: 0.2rem solid var(--color2);
     background-color: transparent;
     cursor: pointer;
 }
@@ -43,16 +60,16 @@ button:active {
 
 img {
     width: 100%;
-    max-height: 200px;
+    max-height: 20rem;
     object-fit: cover;
 }
 
 h2, li {
-    padding: 1.5rem 0;
+    padding: 2rem 0;
 }
 
 header, footer {
-    background-color: lightblue;
+    background-color: var(--color2);
 }
 
 header ul, footer ul {
@@ -69,21 +86,21 @@ footer {
 main .wrapper {
     display: grid;
     grid-template-columns: 1fr 70%;
-    grid-gap: 1rem;
+    grid-gap: 2rem;
 }
 
 .wrapper > div {
-    border: 2px solid lightblue;
+    border: 2px solid var(--color2);
     margin: 1rem 0;
     padding: 1rem;
-    border-radius: 1rem;
-    border: 0.1rem solid lightgray;
+    border-radius: 2rem;
+    border: 0.2rem solid var(--color2);
 }
 
-main nav {
+.shops-list {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .shop-container {
@@ -95,14 +112,14 @@ main nav {
 .products-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1rem;
+    grid-gap: 2rem;
 }
 
 .product {
-    padding: 1rem;
-    font-size: 1.5rem;
-    border-radius: 1rem;
-    border: 0.2rem solid lightblue;
+    padding: 1.5rem;
+    font-size: 2rem;
+    border-radius: 2rem;
+    border: 0.2rem solid var(--color2);
     background-color: transparent;
     display: flex;
     flex-direction: column;
@@ -111,14 +128,47 @@ main nav {
 }
 
 .product:hover {
-    background-color: lightcyan;
-    border-color: lightskyblue;
+    border-color: lightsteelblue;
+    box-shadow: 0 0 1rem lightsteelblue;
 }
 
 .product:hover button {
-    border-color: lightskyblue;
+    border-color: var(--color2);
 }
 
 .product span {
     font-weight: bold;
+}
+
+.button-to-top-show {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+    z-index: 100;
+    width: 8rem;
+    height: 8rem;
+    background-color: var(--color2);
+}
+
+.button-to-top-hidden {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    main .wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .products-container {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .shops-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
 }
