--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,7 @@ main .wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 2rem;
+    padding-top: 1rem;
 }
 
 .product {
